--- a/src/templates/people/people_edit.html
+++ b/src/templates/people/people_edit.html
@@ -38,6 +38,6 @@
         </select></a>
     </div>
     <button onclick="operationEdit()">Изменить</button>
-    <td><a class="btn btn-danger" href="/pages/people/{{people_id}}">Отмена</a></td>
+    <td><a class="btn btn-danger" href="/pages/people/{{people.id}}">Отмена</a></td>
 </div>
 {% endblock %}
