--- a/src/templates/people_ch/people_ch_create.html
+++ b/src/templates/people_ch/people_ch_create.html
@@ -40,7 +40,7 @@
         </select></a>
     </div>
     <button onclick="operationCreate()">Создать</button>
-    <td><a class="btn btn-danger" href="http://0.0.0.0/pages/people_chs">Отмена</a></td>
+    <td><a class="btn btn-danger" href="/pages/people_chs">Отмена</a></td>
 </div>
 {% elif auth.phone == people.phone and people.role.name != "Администратор" %}
 <span>Недостаточно прав для удаления</span>
