--- a/src/templates/people_d/people_d_create.html
+++ b/src/templates/people_d/people_d_create.html
@@ -43,7 +43,7 @@
         </select></a>
     </div>
     <button onclick="operationCreate()">Создать</button>
-    <td><a class="btn btn-danger" href="/pages/people_d">Отмена</a></td>
+    <td><a class="btn btn-danger" href="/pages/people_ds">Отмена</a></td>
 </div>
 {% elif auth.phone == people.phone and people.role.name != "Администратор" %}
 <span>Недостаточно прав просмотра данной страницы</span>
