--- a/src/templates/people_g/people_g_create.html
+++ b/src/templates/people_g/people_g_create.html
@@ -40,7 +40,7 @@
         </select></a>
     </div>
     <button onclick="operationCreate()">Создать</button>
-    <td><a class="btn btn-danger" href="/pages/people_g">Отмена</a></td>
+    <td><a class="btn btn-danger" href="/pages/people_gs">Отмена</a></td>
 </div>
 {% elif auth.phone == people.phone and people.role.name != "Администратор" %}
 <span>У вас недостаточно прав для просмотра страницы</span>
