--- a/src/templates/people/people_create.html
+++ b/src/templates/people/people_create.html
@@ -29,6 +29,8 @@
 {% endblock %}
 
 {% block content %}
+{% for ppl in peoples %}
+{% if auth.phone == ppl.phone and ppl.role.name == "Администратор" %}
 <span>Добавление записи</span>
 <div>
     <div class="flex flex-col">
@@ -44,4 +46,8 @@
     <button onclick="operationCreate()">Создать</button>
     <td><a class="btn btn-danger" href="/pages/peoples">Отмена</a></td>
 </div>
+{% elif auth.phone == ppl.phone and ppl.role.name != "Администратор" %}
+<span>У вас недостаточно прав для создания записей</span>
+{% endif %}
+{% endfor %}
 {% endblock %}
