--- a/src/templates/door/door_edit.html
+++ b/src/templates/door/door_edit.html
@@ -17,7 +17,7 @@
             },
             body: JSON.stringify(door)
         });
-    
+     window.location.href = `/pages/door/${id}`
     }
 </script>
 {% endblock %}
