--- a/src/templates/people_ch/people_ch_edit.html
+++ b/src/templates/people_ch/people_ch_edit.html
@@ -19,7 +19,7 @@
             body: JSON.stringify(pch)
         });
 
-        window.location.href = `/pages/people_chs/${id}`
+        window.location.href = `/pages/people_ch/${id}`
     }
 </script>
 {% endblock %}
